Added font-awesome to project: Added prepare-font-awesome.js to aurelia tasks; Added execution of prepare-font-awesome to build.js Added aurelia-dialog to project

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.0",
     "aurelia-bootstrapper": "^1.0.0",
+    "aurelia-dialog": "^1.0.0-beta.3.0.1",
     "aurelia-fetch-client": "^1.0.0",
     "aurelia-http-client": "^1.0.3",
     "bluebird": "^3.4.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.2",
     "moment": "^2.17.1"
   },
